@@ -1,3 +1,7 @@
+Aug 2, 2007
+
+* ADDED: Support rewriting prolog flag references
+
 Jun 21, 2007
 
 * ADDED: Version indication.
